--- a/Styles.css
+++ b/Styles.css
@@ -1,7 +1,7 @@
 body
 {
 	font-family: "Apple Chancery", Times, serif;
-	background-color: #623767;
+	background-color: #FFFFFF;
 }
 .center
 {
@@ -33,5 +33,5 @@ input[type=button], [type=submit]
 
 input[type=text], [type=password], tr
 {
-	background-color: #9F00FF;
+	background-color: #9FFF30;
 }
