--- a/Styles.css
+++ b/Styles.css
@@ -44,7 +44,7 @@ input[type=text], [type=password], tr
 	background-color: #9FFF30;
 }
 
-input[type=button], [disabled]
+input[type=button], [disabled=true]
 {
 	opacity: 0.3;
 }
