--- a/Styles.css
+++ b/Styles.css
@@ -6,6 +6,14 @@ body
 	background-color: #FFFFFF;
 }
 
+.table-wrapper-scroll-y
+{
+	display: block;
+	max-height: 200px;
+	overflow-y: auto;
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
 .center
 {
 	text-align:center;
