--- a/Styles.css
+++ b/Styles.css
@@ -2,7 +2,7 @@
 
 body
 {
-	font-family: "Apple Chancery", Times, serif;
+	/*font-family: "Apple Chancery", Times, serif;*/
 	background-color: #FFFFFF;
 }
 
