--- a/Styles.css
+++ b/Styles.css
@@ -14,7 +14,7 @@ body
 body,td,th,input,label
 {
 	color: #000;
-	font-family: "Apple Chancery", Times, serif;
+	/*font-family: "Apple Chancery", Times, serif;*/
 }
 
 table
