--- a/Styles.css
+++ b/Styles.css
@@ -1,26 +1,27 @@
 /*This file is imported into all the pages, and thus any CSS within will be applied to any page on the host.*/
 
+body,td,th,h1,input,label
+{
+  background-image: url("what-the-hex.png");
+  text-align: center;
+  font-size: 4vw;
+  padding: 50px;
+  margin-bottom:10px;
+  border-radius: 20px;
+  border-width: 5px;
+  border-color: #4CAF50;
+  font-family: "Palatino Linotype", "Book Antiqua", "Palatino",serif;
+}
+
 body
 {
-	font-family: "Apple Chancery", Times, serif;
-	background-color: #FFFFFF;
-}
-
-.center
-{
-	text-align:center;
-}
-
-body,td,th,input,label
-{
-	color: #000;
-	font-family: "Apple Chancery", Times, serif;
+	
 }
 
 table
 {
-	margin-left:auto;
-	margin-right:auto;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 input[type=checkbox]
@@ -30,38 +31,69 @@ input[type=checkbox]
 
 .titleDiv
 {
-	display: flex;
-	justify-content: center;
-	position: relative;
+              display: flex;
+              justify-content: center;
+              position: relative;
 }
 
 input[type=button], [type=submit], th
 {
-	background-color: #B5ED4E;
+              background-color: #ffffff;
+  width: 25%
+  display: block;
 }
 
 input[type=button], [type=submit]
 {
-	border-radius: 8px;
+              border-radius: 25px;
 }
 
 input[type=text], [type=password], tr
 {
-	background-color: #9FFF30;
+              background-color: #ffffff
+  margin-bottom: 30px;
 }
 
 input[type=button]:disabled
 {
-	opacity: 0.3;
+              opacity: 0.3;
 }
 
 .greenBack
 {
-	background-color:#9FFF30;
+              background-color:#ffffff;
 }
-
+<input class = "button glow-button" type="button" id="btnBack" style="font-size:2vw; position:absolute; left:0; width:8vw; height: 4vw" value="&#x2190"
 .tabButton
 {
-	border-color:#000000;
-	display:inline-block;
+              border-color:#000000;
+              display:inline-block;
+}
+
+.button
+                             {
+                                                          font-size:3vw;
+        font-family: "Palatino Linotype", "Book Antiqua", "Palatino",serif;
+                                                          font-weight:bold;
+                                                          padding: 12px 25px;
+                                                          width: 100%;
+        text-decoration: none;
+        color: rgba(255, 255, 255, 0.8);
+        background: rgb(145, 92, 182);
+        border-radius: 4px
+        transition-duration: 0.4s;
+        cursor: pointer;
+                                                          margin: auto;
+        margin-bottom:20px
+                                           }
+      
+.glow-button {
+  background-color: #ffffff; 
+  color: #000000; 
+  border: 2px solid #4CAF50;
+}
+
+.glow-button:hover {
+  background-color: #4CAF50;
+  color: #ffffff;
 }
