--- a/Styles.css
+++ b/Styles.css
@@ -37,7 +37,7 @@ input[type=checkbox]
 
 input[type=button], [type=submit], th
 {
-	background-color: #B5ED4E;
+	background-color: #FFFFFF;
 }
 
 input[type=button], [type=submit]
@@ -47,7 +47,7 @@ input[type=button], [type=submit]
 
 input[type=text], [type=password], tr
 {
-	background-color: #9FFF30;
+	background-color: #FFFFFF;
 }
 
 input[type=button]:disabled
