--- a/Styles.css
+++ b/Styles.css
@@ -94,7 +94,7 @@ h1, h2
 	transition-duration: 0.4s;
 	cursor: pointer;
 	margin: auto;
-	margin-bottom:20px
+	margin-bottom:1%;
 }
       
 .glow-button
