--- a/Styles.css
+++ b/Styles.css
@@ -72,7 +72,7 @@ h1, h2
 .greenBack
 {
 	background-color:#FFFFFF;
-	border: 2px solid #4CAF50;
+	border: 1% solid #4CAF50;
 	border-radius: 4px
 }
 
