--- a/Styles.css
+++ b/Styles.css
@@ -48,6 +48,7 @@ input[type=button], [type=submit]
 input[type=text], [type=password], tr
 {
 	background-color: #FFFFFF;
+	border: 2px solid #4CAF50;
 }
 
 input[type=button]:disabled
@@ -72,7 +73,7 @@ h1, h2
 .greenBack
 {
 	background-color:#FFFFFF;
-	border: 1% solid #4CAF50;
+	border: 2px solid #4CAF50;
 	border-radius: 4px
 }
 
