--- a/Styles.css
+++ b/Styles.css
@@ -43,6 +43,7 @@ input[type=button], [type=submit], th
 input[type=button], [type=submit]
 {
 	border-radius: 8px;
+	border: 2px solid #4CAF50;
 }
 
 input[type=text], [type=password], tr
