--- a/Styles.css
+++ b/Styles.css
@@ -4,6 +4,7 @@ body
 {
 	font-family: "Apple Chancery", Times, serif;
 	background-color: #FFFFFF;
+	background-image: url("https://previews.123rf.com/images/oksancia/oksancia1307/oksancia130704342/21263924-pastel-blue-fabric-ikat-diamond-seamless-pattern-background.jpg");
 }
 
 .center
