--- a/Styles.css
+++ b/Styles.css
@@ -4,7 +4,7 @@ body
 {
 	font-family: "Apple Chancery", Times, serif;
 	background-color: #FFFFFF;
-	background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQZQGphtsGBj4ULjBVJfylDL81OnvNhf_pqbomTPfEuO7ZcZVEKg");
+	background-image: url("https://ak2.picdn.net/shutterstock/videos/16739452/thumb/1.jpg");
 }
 
 .center
