--- a/Styles.css
+++ b/Styles.css
@@ -4,7 +4,7 @@ body
 {
 	font-family: "Apple Chancery", Times, serif;
 	background-color: #FFFFFF;
-	background-image: url("https://ak2.picdn.net/shutterstock/videos/16739452/thumb/1.jpg");
+	background-image: url("https://drive.google.com/open?id=1PZ2kmBgfXRYIlutDcGTsNUoFzOseYXyv");
 }
 
 .center
