--- a/Styles.css
+++ b/Styles.css
@@ -4,7 +4,7 @@ body
 {
 	font-family: "Apple Chancery", Times, serif;
 	background-color: #FFFFFF;
-	background-image: url("https://drive.google.com/file/d/1PZ2kmBgfXRYIlutDcGTsNUoFzOseYXyv/view");
+	background-image: url("dynamic-style.png");
 }
 
 .center
