--- a/Styles.css
+++ b/Styles.css
@@ -3,8 +3,7 @@
 body
 {
 	font-family: "Apple Chancery", Times, serif;
-	background-color: #FFFFFF;
-	background-image: url("background.png");
+	background-color: #D0F9CF;
 }
 
 .center
