--- a/Styles.css
+++ b/Styles.css
@@ -65,9 +65,9 @@ h1, h2
 	display:inline-block;
 }
 
-textArea
+.text
 {
-	border: 2px solid #000000;
+	border: 1px solid #000000;
 }
 
 .dtLabel
@@ -80,7 +80,7 @@ textArea
 .greenBack
 {
 	background-color:#FFFFFF;
-	border: 2px solid #4CAF50;
+	border: 1px solid #4CAF50;
 	border-radius: 4px
 }
 
@@ -111,7 +111,7 @@ textArea
 {
   background-color: #ffffff; 
   color: #000000; 
-  border: 2px solid #4CAF50;
+  border: 1px solid #4CAF50;
 }
 
 .glow-button:hover
