--- a/Styles.css
+++ b/Styles.css
@@ -21,12 +21,20 @@ body,td,th,input,label
 td,th
 {
 	border: 1px solid #000000;
+	border-top: 1px solid #000000;
 }
 
-.header
+th
 {
 	background-color: #E7F9DB;
-	border-top: 1px solid #000000;
+}
+
+.topRow
+{
+	th
+	{
+		border-top: 1px solid #000000;
+	}
 }
 
 table
