--- a/Styles.css
+++ b/Styles.css
@@ -149,3 +149,36 @@ h2
 	color: #000000;
 	border: 1px solid #000000;
 }
+
+.mainButton
+{
+	font-size:5vw;
+	font-family: "Palatino Linotype", "Book Antiqua", "Palatino",serif;
+	font-weight:bold;
+	padding: 12px 25px;
+	width: 80%;
+	text-decoration: none;
+	color:rgba(255, 255, 255, 0.8);
+	border-radius: 4px
+	transition-duration: 0.4s;
+	cursor: pointer;
+	margin: auto;
+	margin-bottom:0.5%;
+}
+
+.logButton
+	{
+		font-size:4.5vw;
+		font-family: "Palatino Linotype", "Book Antiqua", "Palatino",serif;
+		font-weight:bold;
+		padding: 12px 25px;
+		width: 80%;
+		text-decoration: none;
+		color:rgba(255, 255, 255, 0.8);
+		border-radius: 4px
+		transition-duration: 0.4s;
+		cursor: pointer;
+		margin: auto;
+		margin-bottom:0.5%;
+		width:30%;
+	}
