--- a/Styles.css
+++ b/Styles.css
@@ -125,14 +125,14 @@ h2
 
 .button
 {
-    font-size:3vw;
+    font-size:2.7vw;
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino",serif;
     font-weight:bold;
     padding: 12px 25px;
-	width: 80%;
+	width: 80vw;
 	text-decoration: none;
 	color:rgba(255, 255, 255, 0.8);
-	border-radius: 4px
+	border-radius: 3px
 	transition-duration: 0.4s;
 	cursor: pointer;
 	margin: auto;
