--- a/Styles.css
+++ b/Styles.css
@@ -128,7 +128,7 @@ h2
     font-size:2.4vw;
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino",serif;
     font-weight:bold;
-    padding: 10px 10px;
+    padding: 1% 1%;
 	width: 68vw;
 	text-decoration: none;
 	color:rgba(255, 255, 255, 0.8);
